--- a/04-be-tech/01-middlewares/02-redis/05-高级数据类型.md
+++ b/04-be-tech/01-middlewares/02-redis/05-高级数据类型.md
@@ -21,6 +21,29 @@ Bitmap本质是字符串
 | bitcount key [start end]     | 获取指定范围start，end字节中bit为1的个数<br />如果不指定start，end则为全部 | bitcount unique 1 2 |
 | bitop and\|or\|xor key1 key2 | 求两个位图的交集，并集，异或                                 | bitop and u1 u2     |
 
+### 实际案例
+
+假设网站有1亿用户， 每天独立访问的用户有5千万，如果每天用集合类型和Bitmap存储活跃用户可以得到表
+
+| 数据类型 | 每个用户id占用空间 | 需要存储的用户量 | 全部内存量             |
+| -------- | ------------------ | ---------------- | ---------------------- |
+| set      | 64位               | 50000000         | 64位*50000000 = 400MB  |
+| bitmap   | 1位                | 100000000        | 1位*100000000 = 12.5MB |
+
+很明显， 这种情况下使用Bitmaps能节省很多的内存空间，尤其是随着时间推移节省的内存还是非常可观的
+
+| 数据类型 | 一天   | 一个月 | 一年  |
+| -------- | ------ | ------ | ----- |
+| set      | 400MB  | 12GB   | 144GB |
+| bitmap   | 12.5MB | 375MB  | 4.5GB |
+
+但Bitmaps并不是万金油， 假如该网站每天的独立访问用户很少， 例如只有10万（大量的僵尸用户），那么两者的对比如下表所示， 很显然这时候使用Bitmaps就不太合适了， 因为基本上大部分位都是0
+
+| 数据类型 | 每个用户id占用空间 | 需要存储的用户量 | 全部内存量             |
+| -------- | ------------------ | ---------------- | ---------------------- |
+| set      | 64位               | 100000           | 64位*100000 = 800KB    |
+| bitmap   | 1位                | 100000000        | 1位*100000000 = 12.5MB |
+
 
 
 ## HyperLogLog
