--- a/04-be-tech/01-middlewares/02-redis/06-发布订阅模式.md
+++ b/04-be-tech/01-middlewares/02-redis/06-发布订阅模式.md
@@ -1,12 +1,22 @@
-## 概述
+## 发布订阅
 
-### 术语
+### 概述
 
-发布者：publisher
+发布订阅是一种消息通信模式：发送者 (pub) 发送消息，订阅者 (sub) 接收消息
 
-订阅者：subscriber
+发布者：publisher；订阅者：subscriber；频道：channel
 
-频道：channel
+Redis 客户端可以订阅任意数量的频道
+
+### Redis的发布订阅
+
+客户端能够订阅频道
+
+![](./images/image-20210627011522707.png)
+
+当给频道发布消息后，消息就会发送给订阅的客户端
+
+![](./images/image-20210627011559379.png)
 
 ### 示意图
 
@@ -77,3 +87,9 @@ pubsub numsub [channel]...
 ```shell
 pubsub numsub vrs
 ```
+
+
+
+## 注意事项
+
+Redis中发布的消息没有持久化，客户端只能收到订阅后发布的消息
