--- a/04-be-tech/01-middlewares/02-redis/03-配置与命令.md
+++ b/04-be-tech/01-middlewares/02-redis/03-配置与命令.md
@@ -2,7 +2,7 @@
 
 | 参数      | 说明                   | 默认值 |
 | --------- | ---------------------- | ------ |
-| daemonize | 是否以守护进程方式启动 | on     |
+| daemonize | 是否以守护进程方式启动 | no     |
 | port      | redis占用端口          | 6379   |
 | logfile   | redis系统日志          |        |
 | dir       | redis工作目录          |        |
@@ -18,7 +18,10 @@
 | dbsize             | 获取数据库的key的数量                                        |
 | exists key         | 判断是否存在key；存在返回1，不存在返回0                      |
 | del key [key...]   | 删除key；返回删除个数                                        |
+| unlink key         | 非阻塞删除 key                                               |
 | expire key seconds | 设置key在seconds秒后过期                                     |
 | ttl key            | 查看key的剩余过期时间；-1 表示永远不过期,-2 表示key已经不存在了 |
 | persist key        | 去掉key的过期时间                                            |
-| flushall           | 清空数据库                                                   |
+| flushdb            | 清空当前库                                                   |
+| flushall           | 清空所有数据库                                               |
+| select (dbid)      | 切换数据库，统一密码管理，所有库同样密码                     |
