--- a/03-be/01-go-stack/01-golang/17-包.md
+++ b/03-be/01-go-stack/01-golang/17-包.md
@@ -158,3 +158,47 @@ import (
 * 定义一个导出的方法，在里面使用该未导出的标识符，然后通过使用这个导出的方法来间接使用该未导出的标识符
 
 * 短变量声明操作符，有能力捕获引用的类型，并创建一个未公开的类型的变量，永远不能显式创建一个未公开的类型的变量，但短声明操作符能够这么做
+
+
+
+## GOPRIVATE环境变量
+
+### 概述
+
+当设置完 GOPROXY 后，GO会从代理地址（如 https://goproxy.cn）中拉取包，并且会对下载的软件包和代码库进行完整性校验
+
+当如果仓库是私有仓库那就不应该走 proxy 了，这时候就可以通过设置 GOPRIVATE 变量来跳过代理下载和禁用代码完整性校验
+
+### 使用
+
+GOPRIVATE：支持用逗号分隔，可以填写多个值
+
+```shel
+go env GOPRIVATE=*.corp.example.com,*.private.com
+```
+
+### 本质
+
+设置 `GOPRIVATE` 本质上设置了 `GONOPROXY` 和 `GONOSUMDB`，即
+
+```shell
+go env GOPRIVATE=*.corp.example.com
+```
+
+等价于
+
+```shell
+go env GONOPROXY=*.corp.example.com
+go env GONOSUMDB=*.corp.example.com
+```
+
+可以灵活调整上述两个环境变量，如
+
+```shell
+GOPRIVATE=*.corp.example.com
+GOPROXY=proxy.example.com
+GONOPROXY=none
+```
+
+这样 `Go` 和其他工具就会把 `corp.example.com` 这个域名下的依赖包识别成私有的，但是用户仍然会从公司内部的代理镜像服务器 `proxy.example.com` 上下载所有公有和私有的仓库，因为用户设置了 `GONOPROXY=none`， 这个设置会覆盖 `GOPRIVATE` 变量
+
